--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            <h1>A whale of a greeting</h1>
-        </title>
+        <title>A whale of a greeting</title>
     </head>
     <body>
         <h1>hello, world</h1>
